<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_pokemon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/pokemon_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:contentDescription="@string/pokemon_name"/>

        <TextView
            android:id="@+id/text_id_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:contentDescription="@string/pokemon_id"/>

    </LinearLayout>
</LinearLayout>
